--- a/src/main/resources/templates/demo/demo.html
+++ b/src/main/resources/templates/demo/demo.html
@@ -12,6 +12,9 @@
   <!-- Header Styles -->
   <th:block th:replace="~{common/mainHeader :: headerStyles}"></th:block>
 
+  <!-- Footer Styles -->
+  <th:block th:replace="~{common/footer :: footerStyles}"></th:block>
+
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;600;700;800&display=swap');
 
@@ -673,15 +676,7 @@
 </div>
 
 <!-- Footer -->
-<footer class="bg-gray-900 text-white py-12 mt-16">
-  <div class="max-w-7xl mx-auto px-4 text-center">
-    <div class="flex items-center justify-center space-x-3 mb-4">
-      <img th:src="@{/images/demowave_icon.png}" alt="Demo Wave" class="w-10 h-10">
-      <h3 class="text-xl font-bold">Demo Wave</h3>
-    </div>
-    <p class="text-gray-400">&copy; 2025 Demo Wave. All rights reserved.</p>
-  </div>
-</footer>
+<th:block th:replace="~{common/footer :: footer}"></th:block>
 
 <script th:inline="javascript">
   /*<![CDATA[*/
