--- a/src/main/resources/templates/mypage/demos.html
+++ b/src/main/resources/templates/mypage/demos.html
@@ -12,6 +12,9 @@
   <!-- Header Styles -->
   <th:block th:replace="~{common/mainHeader :: headerStyles}"></th:block>
 
+  <!-- Footer Styles -->
+  <th:block th:replace="~{common/footer :: footerStyles}"></th:block>
+
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700;900&display=swap');
 
@@ -435,13 +438,7 @@
 </main>
 
 <!-- Footer -->
-<footer class="bg-gray-900 text-white py-12 mt-16">
-  <div class="max-w-7xl mx-auto px-4">
-    <div class="border-t border-gray-800 pt-8 text-center text-gray-400">
-      <p>&copy; 2025 Demo Wave. All rights reserved.</p>
-    </div>
-  </div>
-</footer>
+<th:block th:replace="~{common/footer :: footer}"></th:block>
 
 <script>
   // Mobile menu toggle
