--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -18,6 +18,9 @@
   <!-- Header Styles -->
   <th:block th:replace="~{common/mainHeader :: headerStyles}"></th:block>
 
+  <!-- Footer Styles -->
+  <th:block th:replace="~{common/footer :: footerStyles}"></th:block>
+
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700;900&display=swap');
 
@@ -413,6 +416,9 @@
 
   <!-- Today Demo Popup -->
   <th:block th:replace="~{common/todayDemoPopup :: popup}"></th:block>
+
+  <!-- Footer -->
+  <th:block th:replace="~{common/footer :: footer}"></th:block>
 
 </body>
 </html>
