--- a/src/main/resources/templates/common/footer.html
+++ b/src/main/resources/templates/common/footer.html
@@ -32,8 +32,10 @@
         <h4 class="font-bold mb-4">サポート</h4>
         <ul class="space-y-2 text-gray-400">
           <li><a th:href="@{/about#faq}" class="hover:text-white">よくある質問</a></li>
+          <li><a th:href="@{/contact}" class="hover:text-white">お問い合わせ</a></li>
           <li><a th:href="@{/privacy}" class="hover:text-white">プライバシーポリシー</a></li>
           <li><a th:href="@{/terms}" class="hover:text-white">利用規約</a></li>
+          <li><a th:href="@{/legal}" class="hover:text-white">特定商取引法に基づく表記</a></li>
         </ul>
       </div>
     </div>
